Update content-wrapper z-index to try to fix Dropdown networks nav from hiding behind it.

--- a/app/assets/stylesheets/sencha_base/style.scss
+++ b/app/assets/stylesheets/sencha_base/style.scss
@@ -1155,7 +1155,7 @@ background-position: 0 -729px;
   position: relative;
   text-align: left;
   width: 100%;
-  z-index: 998;
+  z-index: 9;
 }
 
 .loading-indicator {
